--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,6 @@
   box-sizing: border-box;
   transition:
     background-color 220ms ease,
-    color 220ms ease,
     border-color 220ms ease,
     fill 220ms ease,
     stroke 220ms ease;
